--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node_modules/.bin/mocha --timeout 10000"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -18,5 +19,10 @@
     "passport-twitter": "^1.0.4",
     "pug": "2.0.0-beta11",
     "twitter": "^1.7.1"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "passport-stub": "^1.1.1",
+    "supertest": "^3.1.0"
   }
 }
