--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "morgan": "~1.9.0",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.4",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "pug": "2.0.0-beta11",
-    "twitter": "^1.7.1"
+    "sequelize": "^4.33.4",
+    "twitter": "^1.7.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "mocha": "^4.0.1",
