--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "helmet": "^1.1.0",
     "http-errors": "~1.6.2",
+    "jquery": "^3.3.1",
     "morgan": "~1.9.0",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.4",
@@ -25,8 +26,13 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "babel-loader": "^8.0.4",
     "mocha": "^4.0.1",
     "passport-stub": "^1.1.1",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   }
 }
