--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "node_modules/.bin/mocha --timeout 10000"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
+    "csurf": "^1.8.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
@@ -15,11 +17,13 @@
     "helmet": "^1.1.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "moment-timezone": "^0.5.0",
     "morgan": "~1.9.0",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.4",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
+    "popper.js": "^1.14.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^4.33.4",
     "twitter": "^1.7.1",
