--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "supertest": "^3.1.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
+  },
+  "engines": {
+    "node": "8.9.4"
   }
 }
